@@ -17,6 +17,7 @@
 -- fixed flowbits init
 -- fixed byte extract var init
 -- changed doc to use "legacy" instead of "classic"
+-- restricted reload to basic modules and inspectors only
 
 126
 -- pulled latest from tom
